Added bitmap.h and .cpp but I am getting errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(hooray main.cpp
     src/triangle.cpp
     src/vec2.cpp
     src/vec3.cpp
+    src/bitmap.cpp
 )
 target_include_directories(hooray PRIVATE src)
 target_link_libraries(hooray ${SDL2_LIBRARIES})
