--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ if (NOT CMAKE_BUILD_TYPE)
     message (STATUS "Build type not specified: Use Release by default")
 endif (NOT CMAKE_BUILD_TYPE)
 
-find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
+# find_package(SDL2 REQUIRED)
+# include_directories(${SDL2_INCLUDE_DIRS})
 
 # executable
 add_executable(hooray main.cpp
@@ -25,6 +25,7 @@ add_executable(hooray main.cpp
     src/vec3.cpp
     src/bitmap.cpp
     src/ui.cpp
+    src/exp.cpp
 )
 target_include_directories(hooray PRIVATE src)
-target_link_libraries(hooray ${SDL2_LIBRARIES})
+# target_link_libraries(hooray ${SDL2_LIBRARIES})
