--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required (VERSION 3.11)
 
-
 project ( hooray CXX )
 
 set (CMAKE_CXX_STANDARD 20)
@@ -10,8 +9,8 @@ if (NOT CMAKE_BUILD_TYPE)
     message (STATUS "Build type not specified: Use Release by default")
 endif (NOT CMAKE_BUILD_TYPE)
 
-# find_package(SDL2 REQUIRED)
-# include_directories(${SDL2_INCLUDE_DIRS})
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
 
 # executable
 add_executable(hooray main.cpp
@@ -28,4 +27,4 @@ add_executable(hooray main.cpp
     src/exp.cpp
 )
 target_include_directories(hooray PRIVATE src)
-# target_link_libraries(hooray ${SDL2_LIBRARIES})
+target_link_libraries(hooray ${SDL2_LIBRARIES})
