Different approach to shadows. Added back rgba.h. Modified CMakeLists.txt. Added a method for exporting as png (Do not know if it works)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(hooray main.cpp
     src/object.cpp
     src/ray.cpp
     src/rgb.cpp
+    src/rgba.cpp
     src/scene.cpp
     src/triangle.cpp
     src/vec2.cpp
